# langchain-client-01

./: .env.example  README.md  poetry.toml  pyproject.toml
langchain_client/: openai.py
tests/: assertions.py  test_geminiapi.py  test_openai.py
